generic repository
implement only to get all and get by properties
