# docs/swagger.json
@@ -235,34 +235,6 @@
                 }
             }
         },
-        "/person/id}": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "person"
-                ],
-                "summary": "Get person by id",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Person ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    }
-                }
-            }
-        },
         "/person/{id}": {
             "put": {
                 "produces": [
@@ -328,6 +300,41 @@
                     }
                 }
             }
+        },
+        "/person/{name}/{born}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "person"
+                ],
+                "summary": "Get person by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name Person",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "year person born",
+                        "name": "born",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -341,6 +348,7 @@
                     "type": "string"
                 },
                 "title": {
+                    "description": "gorm.Model",
                     "type": "string"
                 }
             }
