# handler/person.go
@@ -1,6 +1,13 @@
 package handler
 
-import "github.com/gofiber/fiber/v2"
+import (
+	url "net/url"
+	"strconv"
+
+	"github.com/gofiber/fiber/v2"
+	"github.com/guimaraaes/golang_fiber_with_neo4j/model"
+	"github.com/guimaraaes/golang_fiber_with_neo4j/repository"
+)
 
 // GetPerson godoc
 // @Tags person
@@ -10,8 +17,12 @@ import "github.com/gofiber/fiber/v2"
 // @Failure 400 "Bad Request"
 // @Router /person [get]
 func GetPerson(c *fiber.Ctx) error {
-
-	return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"status": "success"})
+	var person []model.Person
+	p, err := repository.FindR(person, nil)
+	if err != "" {
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"status": err})
+	}
+	return c.Status(fiber.StatusOK).JSON(p)
 
 }
 
@@ -19,12 +30,22 @@ func GetPerson(c *fiber.Ctx) error {
 // @Tags person
 // @Summary Get person by id
 // @Produce json
-// @Param id path int true "Person ID"
+// @Param name path string true "name Person"
+// @Param born path int true "year person born"
 // @Success 200 "OK"
 // @Failure 400 "Bad Request"
-// @Router /person/id} [get]
+// @Router /person/{name}/{born} [get]
 func GetPersonId(c *fiber.Ctx) error {
-	return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"status": "success"})
+	n := c.Params("name")
+	name, _ := url.QueryUnescape(n)
+	born, _ := strconv.ParseInt(c.Params("born"), 10, 64)
+
+	var person []model.Person
+	p, err := repository.FindR(person, map[string]interface{}{"name": name, "born": born})
+	if err != "" {
+		return c.Status(fiber.StatusOK).JSON(fiber.Map{"status": err})
+	}
+	return c.Status(fiber.StatusOK).JSON(p)
 }
 
 // PostPerson godoc
